--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -1,13 +1,14 @@
-.header{
-    font-size: 26px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.header {
+  font-size: 26px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
 }
-.avatar-img{
-    height: 40px;
-    width: 40px;
+.avatar-img {
+  height: 40px;
+  width: 40px;
 }
-.ion-avatar{
-    height: auto;
-    width: auto;
-    text-align: end;
+.ion-avatar {
+  height: auto;
+  width: auto;
+  text-align: end;
 }
